app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
 body{
   background-image: url("bg.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;

 }

 #title{
   font-family: 'Poiret One', cursive;
 }

header{
  display: block;
  height: 200px;
  width: 100%;
  background-color: black;
  position: absolute;
  top: 0px;
  left: 0px;
}

#content {
  position: absolute;
  top: 200px;
}

#title{
  color: purple;
  font-size: 80px;
}

#visualmain{
  background-image: url("visual_main.jpg");
}

#availablenow{
  position: absolute;
  top: 15%;
  left: 2%;
}

#title{
  position: absolute;
  top: 10%;
  left: 20%;
}

#barcode{
  position: absolute;
  left: 33%;
}

